--- a/Features/Payments/Stripe.Onboarding.Features.Payments/Stripe.Onboarding.Features.Payments.csproj
+++ b/Features/Payments/Stripe.Onboarding.Features.Payments/Stripe.Onboarding.Features.Payments.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Stripe.net" Version="44.10.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\..\Foundations\Stripe.Onboarding.Foundations.Common\Stripe.Onboarding.Foundations.Common.csproj" />
   </ItemGroup>
 
