#dev [Added] - ApiController for getting session status - PublicKey setting [Fixed] - Updated the embedded form to use the strip JS library logic, routed to controller endpoint

--- a/Projects/Stripe.Onboarding.App/appsettings.json
+++ b/Projects/Stripe.Onboarding.App/appsettings.json
@@ -7,7 +7,8 @@
     }
   },
   "StripeConfiguration": {
-    "StripeSecretKey": "secrets"
+    "StripeSecretKey": "secrets",
+    "StripePublicKey": "secrets"
   },
   "AllowedHosts": "*"
 }
