--- a/Features/Payments/Stripe.Onboarding.Features.Payments/Stripe.Onboarding.Features.Payments.csproj
+++ b/Features/Payments/Stripe.Onboarding.Features.Payments/Stripe.Onboarding.Features.Payments.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Foundations\Stripe.Onboarding.Foundations.Common\Stripe.Onboarding.Foundations.Common.csproj" />
+    <ProjectReference Include="..\..\..\Foundations\Stripe.Onboarding.Foundations.Integrations.Stripe\Stripe.Onboarding.Foundations.Integrations.Stripe.csproj" />
   </ItemGroup>
 
 </Project>
