--- a/Features/Cart/Stripe.Onboarding.Features.Cart/Stripe.Onboarding.Features.Cart.csproj
+++ b/Features/Cart/Stripe.Onboarding.Features.Cart/Stripe.Onboarding.Features.Cart.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\Foundations\Stripe.Onboarding.Foundations.Common\Stripe.Onboarding.Foundations.Common.csproj" />
     <ProjectReference Include="..\..\..\Foundations\Stripe.Onboarding.Foundations.Integrations.Stripe\Stripe.Onboarding.Foundations.Integrations.Stripe.csproj" />
+    <ProjectReference Include="..\..\..\Foundations\Stripe.Onboarding.Foundations.Products\Stripe.Onboarding.Foundations.Products.csproj" />
   </ItemGroup>
 
 </Project>
