#DEV [Added] - Added the azure keyvault for secrets [Removed] - Deleted the appsettings in the cart project

--- a/Projects/Stripe.Onboarding.App/appsettings.json
+++ b/Projects/Stripe.Onboarding.App/appsettings.json
@@ -11,5 +11,6 @@
     "StripeSecretKey": "secrets",
     "StripePublicKey": "secrets"
   },
+  "KeyVaultName": "stripesandbox",
   "AllowedHosts": "*"
 }
