#DEV [Changed] - Cleaned up some code - Updated the razor files [In Progress] - Need a better solution for webhooks / updating the order details for the 3 payment methods

--- a/Features/Payments/Stripe.Onboarding.Features.Payments/Stripe.Onboarding.Features.Payments.csproj
+++ b/Features/Payments/Stripe.Onboarding.Features.Payments/Stripe.Onboarding.Features.Payments.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Controller\PaymentIntentApiController.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Stripe.net" Version="44.11.0" />
   </ItemGroup>
 
