--- a/Projects/Stripe.Onboarding.App/appsettings.json
+++ b/Projects/Stripe.Onboarding.App/appsettings.json
@@ -1,16 +1,16 @@
 {
-  "Domain": "https://localhost:7230/",
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "StripeConfiguration": {
-    "StripeWebhookSecret": "secrets",
-    "StripeSecretKey": "secrets",
-    "StripePublicKey": "secrets"
-  },
-  "KeyVaultName": "stripesandbox",
-  "AllowedHosts": "*"
+    "Domain": "https://localhost:7230/",
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "StripeConfiguration": {
+        "StripeWebhookSecret": "secrets",
+        "StripeSecretKey": "secrets",
+        "StripePublicKey": "secrets"
+    },
+    "KeyVaultName": "stripe-playground-vault",
+    "AllowedHosts": "*"
 }
